# Robocup

./: README.md
ROS_CAO_Model_DTrobot/: Assemblage_Dribler.SLDASM  Assemblage_Final.SLDASM  Assemblage_Puncher.SLDASM  Assemblage_omniwheel.SLDASM
ROS_CAO_Model_DTrobot/Assemblage_Final_screen/: CMakeLists.txt  package.xml
ROS_CAO_Model_DTrobot/Part/: Ball.SLDPRT  Base_bottom.SLDPRT  Base_top.SLDPRT  Camera.SLDPRT  Lidar.SLDPRT  Maintient_cylindrique.SLDPRT  Puncher_coque_ext.SLDPRT  Support_dribler.SLDPRT  Support_omniwheel.SLDPRT  Tige_dribler.SLDPRT  Tige_support_omniwheel.SLDPRT  tige_piston.SLDPRT
ROS_CAO_Model_DTrobot/Scripts/: robot_command_node.py  robot_control.yaml
ROS_CAO_Model_DTrobot/omni_robot/: package.xml
ROS_CAO_Model_DTrobot/omni_robot_!FINALE!/: CMakeLists.txt  package.xml  scripts
ROS_CAO_Model_DTrobot/omni_robot_!FINALE!/config/: joints.yaml
ROS_CAO_Model_DTrobot/omni_robot_!FINALE!/launch/: gazebo.launch
ROS_CAO_Model_DTrobot/omni_robot_!FINALE!/meshes/: Dribler.STL  Puncher.STL
ROS_CAO_Model_DTrobot/omni_robot_!FINALE!/scripts/: Ball_Tracker.py  move_omni.py
ROS_CAO_Model_DTrobot/omni_robot_!FINALE!/urdf/: omni_robot.urdf
ROS_CAO_Model_DTrobot/omniwheel/: Ensamblaje1.SLDASM  RuedaOficial.SLDPRT  lateral1.SLDPRT  rueda1.SLDPRT  ruedaLateral.SLDPRT
omni_robot/: Command_moove_to_point.txt  GPT discuss
omni_robot/config/: robot_control.yaml
omni_robot/meshes/: Wheel_Back_Right.STL
omni_robot/script/: pid_controller.py  robot_control_node.py  wheel_command.py  wheel_control.py
omni_robot/urdf/: omni_robot.urdf
(+85 files in other folders)
