<package format="2">
  <name>omni_robot</name>
  <version>1.0.1</version>
  <description>
    <p>Robot omniwheel BRISSON BOUTEUMEUR</p>
  </description>
  <author>BRISSON/BOUTEUMEUR</author>
  <maintainer email="brissonthibaud974@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>